<resources>
    <string name="app_name">Word</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_challenge">New Challenge</string>
    <string name="invitationTitle">Pending Invitation</string>
    <string name="placeHolder">
        this will be replaced as activity launch</string>
    <string name="expire">Expired Date: 2020-12-13</string>
    <string name="pendingChallenge">Pending Challenge</string>
    <string name="counterChallenge">Counter Challenge</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="title_activity_active_challenges">MainActivity</string>
    <string-array name="friends_array">
        <item>Maliek</item>
        <item>Mallika</item>
        <item>Ruisong</item>
        <item>Adi</item>
        <item>Mayra</item>
        <item>Divey</item>
        <item>Aid</item>
        <item>Will</item>
    </string-array>
</resources>