<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".handleInvitation.ReactionActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:gravity="center"
        android:paddingVertical="10sp"
        android:text="@string/pendingChallenge"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="fill_vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="40dp">
                    <ImageView
                        android:id="@+id/reaction_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/profile"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingEnd="20dp"
                android:orientation="vertical"
                android:layout_weight="6"
                tools:ignore="RtlSymmetry">
                <TextView
                    android:id="@+id/reaction_challenger"
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/reaction_description"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/placeHolder"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reaction_description_title"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:text="Description (By Jenny):"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reaction_description_details"
            android:layout_marginHorizontal="10dp"
            android:textSize="18sp"
            android:text="@string/placeHolder"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reaction_penalty_title"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:text="Penalty (By Jenny):"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reaction_penalty_details"
            android:layout_marginHorizontal="10dp"
            android:textSize="18sp"
            android:text="@string/placeHolder"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reaction_start_date"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:text="SENT on: 2020-11-15"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reaction_end_date"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:text="ENDS on: 2020-11-15"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/reaction_counter_challenge"
        android:clickable="true"
        android:textSize="30sp"
        android:background="@color/teal_200"
        android:text="@string/counterChallenge"
        android:gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="60dp"
            android:textSize="30sp"
            android:background="@color/decline_red"
            android:text="@string/decline"
            android:clickable="true"
            android:id="@+id/reaction_decline"
            android:layout_weight="1"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />
        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="60dp"
            android:textSize="30sp"
            android:background="@color/accept_green"
            android:text="@string/accept"
            android:clickable="true"
            android:id="@+id/reaction_accept"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>