<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tealPrimary"
            android:gravity="center"
            android:paddingVertical="10sp"
            android:text="@string/invitationTitle"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:id="@+id/notification_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="40dp">
                    <ImageView
                        android:id="@+id/notification_profile1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ruisong"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingEnd="20dp"
                android:orientation="vertical"
                android:layout_weight="6"
                tools:ignore="RtlSymmetry">
                <TextView
                    android:id="@+id/notification_challenger1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:id="@+id/notification_description1"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:text="@string/placeHolder"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/notification_date1"
                    android:textStyle="bold"
                    android:text="@string/expire"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />
        <LinearLayout
            android:id="@+id/notification_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:layout_height="match_parent">
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="40dp">
                    <ImageView
                        android:id="@+id/notification_profile2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ruisong"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingEnd="20dp"
                android:orientation="vertical"
                android:layout_weight="6"
                tools:ignore="RtlSymmetry">
                <TextView
                    android:id="@+id/notification_challenger2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:id="@+id/notification_description2"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:text="@string/placeHolder"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/notification_date2"
                    android:textStyle="bold"
                    android:text="@string/expire"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />
    </LinearLayout>
</ScrollView>